# cmake-template

./: .clang-format  CMakeLists.txt
app/: CMakeLists.txt  main.cc
include/: test.h
lib/: CMakeLists.txt  test.cc
tests/: CMakeLists.txt  example_test.cc
